# EldenRing-Modding-imCioco

./: .gitignore  .gitmodules  README.md
AdjustableSpellCost/: AdjustableSpellCost.ini  CMakeLists.txt  README.md  build.bat
AdjustableSpellCost/release/: AdjustableSpellCost.ini  AdjustableSpellCost.rar
AdjustableSpellCost/src/: main.cpp
AdjustableSummonCost/: .gitignore  AdjustableSummonCost.ini  CMakeLists.txt  README.md
AdjustableSummonCost/src/: ini.hpp  main.cpp
CustomTalismanEffects/: .gitignore  CMakeLists.txt  CustomTalismanEffects.ini  README.md  build.bat  todos.txt
CustomTalismanEffects/release/: CustomTalismanEffects.ini  CustomTalismanEffects.rar
CustomTalismanEffects/src/: game_access.cpp  game_access.hpp  hooks.cpp  hooks.hpp  ini.hpp  log.cpp  log.hpp  main.cpp  messages.cpp  messages.hpp  offsets.cpp  offsets.hpp  overlay.cpp  overlay.hpp  session_store.cpp  session_store.hpp  state.cpp  state.hpp  talisman_names.hpp
CustomTalismanEffects/tools/: gen_talisman_data.py
InfiniteWeaponBuffs/: CMakeLists.txt  InfiniteWeaponBuffs.ini  README.md  build.bat
InfiniteWeaponBuffs/src/: apply.cpp  apply.hpp  buff_filters.cpp  buff_filters.hpp  config.cpp  config.hpp  discover.cpp  discover.hpp  dual_wield.cpp  dual_wield.hpp  horse_protection.cpp  horse_protection.hpp  ini.hpp  main.cpp  speffect_lookup.cpp  speffect_lookup.hpp  utils.cpp  utils.hpp
OmniCaster/: CMakeLists.txt  OmniCaster.ini  README.md  build.bat
OmniCaster/cmake/: embed_names.cmake
OmniCaster/release/: OmniCaster.rar
OmniCaster/src/: ini.hpp  main.cpp  names.cpp  names.hpp  player_stats.cpp  player_stats.hpp  scaling.cpp  scaling.hpp  scan.hpp  utils.cpp  utils.hpp
PersistentBuffs/: .gitignore  CMakeLists.txt  PersistentBuffs.ini  README.md  build.bat  issues.txt
PersistentBuffs/src/: buff_discovery.cpp  buff_discovery.hpp  buff_filters.cpp  buff_filters.hpp  buff_timing.cpp  buff_timing.hpp  config.cpp  config.hpp  game_access.cpp  game_access.hpp  ini.hpp  main.cpp  offsets.cpp  offsets.hpp  scan.hpp  session_store.cpp  session_store.hpp  utils.cpp  utils.hpp  weapon_memory.cpp  weapon_memory.hpp
QuestPath/tools/: extract_flags.py
